--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.3",
-    "@google/genai": "^0.1.0"
+    "@google/genai": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
